[metadata]
version = 1.0.0
name=hyteratak
author=Kortel
author_email=hytera@kortel.systems
description=Hytera to Cursor-On-Target Gateway
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kortel-systems/hyteratak
project_urls =
    Bug Tracker = https://github.com/kortel-systems/hyteratak/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Environment :: Console
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Typing :: Typed
    Intended Audience :: Telecommunications Industry
    Natural Language :: English
keywords=Hytera, repeater, dmr, Cursor on Target, ATAK, TAK, CoT

[options]
zip_safe = False
packages =
    hyteratak
    hyteratak.cli
    hyteratak.kaitai
    hyteratak.lib
python_requires = ~=3.7
install_requires=
    configparser>=5.0.1
    kaitaistruct>=0.9
    asyncio>=3.4.3
    pytak==3.5.2

[options.entry_points]
console_scripts =
    hyteratak = hyteratak.cli.hyteratak_start:cli
